# sourcekit-bazel-bsp

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .swift-format  AGENTS.md  BUILD.bazel  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Enable Extended Logging.mobileconfig  MODULE.bazel  Makefile  NOTICE  OWNERS.md  Package.swift  README.md  catalog-info.yaml
.bcr/: config.yml  metadata.template.json  source.template.json
Example/: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  README.md
Example/.bsp/: BUILD  apple.json  config.json  sourcekit-bazel-bsp
Example/.claude/: settings.json
Example/.sourcekit-lsp/: config.json
Example/HelloWorld/: BUILD  Package.swift  template.swift.tpl
Example/HelloWorld/Filegroup/: FilegroupAliased.swift  FilegroupForE2ETest.swift  FilegroupForE2ETest2.swift  FilegroupForUnitTest.swift  FilegroupForUnitTest2.swift  FilegroupNested.swift
Example/HelloWorld/HelloWorldE2ETests/: HelloWorldE2ETests.swift
Example/HelloWorld/HelloWorldLib/Sources/: AddTodoView.swift  ContentView.swift  CrossFileView.swift  HelloWorldApp.swift  TodoItemRow.swift  TodoListView.swift
Example/HelloWorld/HelloWorldLibDep/Sources/: Dep.swift
Example/HelloWorld/HelloWorldTests/: HelloWorldTests.swift  SKDateDistanceCalculatorTests.swift  TodoItemTests.swift  TodoListManagerTests.swift  TodoListViewTests.swift
Example/HelloWorld/MacApp/MacAppLib/Sources/: MacApp.swift
Example/HelloWorld/MacApp/MacAppTests/: Info.plist  TodoItemMacTests.swift
Example/HelloWorld/MacCLIApp/MacCLIAppLib/Sources/: main.swift
Example/HelloWorld/ObjCDep/Sources/: ObjCDep.h  ObjCType.h  ObjCType.m  module.modulemap
Example/HelloWorld/Resources/: Info.plist  MacApp-Info.plist  MacCLIApp-Info.plist  WatchApp-Info.plist  WatchExt-Info.plist
Example/HelloWorld/TodoCSupport/include/: SKCUtils.h  SKCppUtils.hpp
Example/HelloWorld/TodoCSupport/src/: SKCUtils.c  SKCppUtils.cpp
Example/HelloWorld/TodoModels/Sources/: TodoItem.swift  TodoListManager.swift
Example/HelloWorld/TodoObjCSupport/Sources/: SKDateDistanceCalculator.h  SKDateDistanceCalculator.m  SKObjCUtils.h  SKObjCUtils.m  SKObjCppUtils.h  SKObjCppUtils.mm  TodoObjCSupport.h  module.modulemap
Example/HelloWorld/WatchApp/WatchAppLib/Sources/: WatchApp.swift
Example/HelloWorld/WatchApp/WatchAppTests/: TodoItemWatchTests.swift
Example/claude-marketplace/.claude-plugin/: marketplace.json
Example/claude-marketplace/plugins/sourcekit-lsp-custom/: .lsp.json
Example/claude-marketplace/plugins/sourcekit-lsp-custom/.claude-plugin/: plugin.json
Example/scripts/: HelloWorld  launch_and_debug.sh  lldb_attach.py  lldb_common.py  lldb_inject_settings.py  lldb_kill_app.py  lldb_launch_and_debug.sh  select_simulator.sh
Example/tools/: apple.bzl  sourcekit_lsp_binary.bzl
Example/tools/patches/: BUILD  rules_apple_watchos_run_support.patch
Example/tools/vscode/: BUILD.bazel  settings.bzl  setup_sourcekit_vscode_settings.sh.tpl
(+214 files in other folders)
