bazel_dep(name = "sourcekit_bazel_bsp", version = "0.4.2")
local_path_override(
    module_name = "sourcekit_bazel_bsp",
    path = "../",
)

bazel_dep(
    name = "rules_swift",
    version = "3.3.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_apple",
    version = "4.3.2",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(name = "apple_support", version = "1.24.5", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")