bazel_dep(name = "sourcekit_bazel_bsp", version = "0.7.1")
local_path_override(
    module_name = "sourcekit_bazel_bsp",
    path = "../",
)

bazel_dep(
    name = "rules_swift",
    version = "3.4.0",
)

bazel_dep(
    name = "rules_apple",
    version = "4.3.3",
)

bazel_dep(name = "apple_support", version = "1.24.5")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")